--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <header id="header">
         <img src="./src/img/yash.jpg">
         <h1>Hi, I'm Yash Prajapati<br>
-            <a id="title">Assistant System Engineer
-            <br>TATA Consultancy Services</a>     
+            <a id="title" href="https://www.linkedin.com/in/jagarwal-yash/">ETL Developer (IICS, Informatica PC, SAP BODS)
+            <br>@ TATA Consultancy Services</a>     
         </h1>   
     </header>
 
